--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "<develop@addapptables.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "build": "tslint -p tsconfig.json -c tslint.json && tsc"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
+    "backend-tslint-rules": "^1.4.0",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.3"
   }
 }
