--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "repository": "https://github.com/addapptables/cqrs.git",
   "author": "<develop@addapptables.com>",
   "license": "MIT",
+  "pre-commit": [
+    "precommit"
+  ],
   "scripts": {
-    "build": "tslint -p tsconfig.json -c tslint.json && tsc"
+    "build": "yarn lint && tsc",
+    "precommit": "yarn lint",
+    "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
     "backend-tslint-rules": "^1.4.0",
+    "pre-commit": "^1.2.2",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3"
   }
