--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "build": "yarn lint && tsc",
     "precommit": "yarn lint",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "mocha --require ts-node/register test/**/*.ts"
+    "test": "mocha --require ts-node/register test/**/**/*.spec.ts"
   },
   "dependencies": {
     "reflect-metadata": "0.1.12"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.6",
     "@types/mocha": "5.2.5",
     "backend-tslint-rules": "1.4.0",
+    "chai": "4.2.0",
     "mocha": "5.2.0",
     "pre-commit": "1.2.2",
     "ts-node": "7.0.1",
